# telecom-data-governance-local

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: build-windows-exe.yml  quality.yml
docs/superpowers/plans/: 2026-06-16-engineering-roadmap-implementation.md  2026-07-08-electricity-cost-reduction-analysis.md  2026-07-08-tower-rent-anomaly-analysis.md  2026-07-10-reliability-hardening.md  2026-07-11-route-modularization.md  2026-07-12-analysis-opportunity-closure.md  2026-07-12-audit-rule-modularization.md  2026-07-12-engineering-quality-baseline.md
docs/superpowers/specs/: 2026-07-08-electricity-cost-reduction-analysis-design.md  2026-07-08-tower-rent-anomaly-analysis-design.md  2026-07-10-reliability-hardening-design.md  2026-07-11-route-modularization-design.md  2026-07-12-analysis-opportunity-closure-design.md  2026-07-12-audit-rule-modularization-design.md  2026-07-12-engineering-quality-baseline-design.md  2026-07-17-next-optimization-design.md
scripts/: build_app.ps1  build_app.sh  check.sh  start.sh
src/governance_app/: __init__.py  analysis_reviews.py  analytics.py  archive.py  audit_engine.py  audit_quality.py  audit_rules.py  backup.py  config.py  corrections.py  db.py  desktop.py  electricity_analysis.py  exporter.py  geo.py  import_preview.py  importer.py  issue_status.py  maintenance.py  migrations.py  models.py  operation_guard.py  recent_files.py  reset.py  rule_catalog.py  rule_fields.py  rule_helpers.py  rule_settings.py  rule_types.py  server.py  settings_service.py  templates.py  tower_rent_analysis.py  version.py  workflow.py
src/governance_app/routes/: __init__.py  analysis.py  (+6 more)
tests/: conftest.py  test_analysis_review_ui.py  test_analysis_reviews.py  test_analytics_backup.py  test_audit_engine.py  test_config.py  test_db.py  test_electricity_analysis.py  test_end_to_end.py  test_export_and_corrections.py  test_import_preview.py  test_importer.py  test_maintenance.py  test_performance_baseline.py  test_quality_gate.py  test_reset.py  test_server.py  test_templates.py  test_tower_rent_analysis.py  test_workflow.py
tests/routes/: test_analysis.py  test_audits.py  test_batches.py  test_common.py  test_dispatch.py  test_imports.py  test_reports.py  test_system.py
tests/rules/: test_cross_ledger_rules.py  test_factories.py  test_generator_rules.py  test_rule_snapshot.py  test_site_rules.py  test_structure.py  test_tower_rent_rules.py
(+21 files in other folders)
