[project]
name = "local-base-data-governance"
version = "0.1.0"
description = "Local single-machine tool for telecom tower rent and electricity fee data governance"
requires-python = ">=3.12"
dependencies = ["openpyxl>=3.1.0"]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
