[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-base-data-governance"
version = "0.2.0"
description = "Local single-machine tool for telecom tower rent and electricity fee data governance"
requires-python = ">=3.12"
dependencies = ["openpyxl>=3.1.0"]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]
package = ["pyinstaller>=6.0.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
