[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-base-data-governance"
version = "0.2.0"
description = "Local single-machine tool for telecom tower rent and electricity fee data governance"
requires-python = ">=3.12"
dependencies = ["openpyxl>=3.1.0"]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-cov>=6.0",
  "ruff>=0.11",
  "mypy>=1.15",
]
package = ["pyinstaller>=6.0.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.12"
files = [
  "src/governance_app/rule_types.py",
  "src/governance_app/rule_fields.py",
  "src/governance_app/rule_helpers.py",
  "src/governance_app/audit_rules.py",
  "src/governance_app/rules",
  "src/governance_app/routes",
]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["governance_app"]

[tool.coverage.report]
show_missing = true
fail_under = 90
exclude_also = ['if __name__ == .__main__.:']

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
